# can-ros2-bridge

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
config/: config_SensoricSolutionsOMSRace_040326_1050.xml  config_SensoricSolutionsOMSRace_040326_1846.xml  example.xml  sensoric_solutions.xml  test_partial.xml
dbc/: SensoricSolutionsOMSRace.dbc
docker/: Dockerfile  run_all_tests.sh  test_ros2.sh
launch/: can_bridge_launch.py
node/: Cargo.toml
node/src/: bridge.rs  can.rs  config.rs  lib.rs  main.rs  ros.rs  signal.rs
node/tests/: helpers.rs  test_config.rs  test_signal.rs  test_signal_edge.rs
systemd/: can_ros_bridge.service
test-pipeline/: can_send.py  generate_frames.py  run_integration.py  run_ros2_test.py  run_test.py  validate.py  validate_ros2.py  vcan_setup.sh  xml_parser.py
tools/: cli.py  gui_main.py  gui_table.py  mapper.py  parser.py  requirements.txt  test_parser.py  test_xml_export.py  xml_export.py
web/: README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
